# xuyonghui6512.github.io

./: README.md  _config.yml  c.sh  index.md
Clion练习forC++/排序1/: CMakeLists.txt  main.cpp
Clion练习forC++/类的consst初始化/: CMakeLists.txt  main.cpp
ORB特征/: CMakeLists.txt  main.cpp
SVM识别零件/: main.cpp
slambook练习/Eigen的使用/useGeometry/: eigenGeometry.cpp
slambook练习/李群与李代数理解/useSophus/: useSophus.cpp
一个图像处理工程/: CMakeLists.txt
一个图像处理工程/src/: 1.cpp  CMakeLists.txt
练习/Cmake学习/: CMakeLists.txt  main.cpp
练习/FileStorage写操作/src/: c.cpp
练习/FileStorage读操作/src/: c.cpp
练习/Houghcircle/src/: c.cpp
练习/Mat初探/src/: c.cpp
练习/SURF/src/: CMakeLists.txt  c1.cpp  无标题文档
练习/SVM/src/: c.cpp
练习/bitwise/: CMakeLists.txt
练习/bitwise/src/: CMakeLists.txt  main.cpp
练习/canny边缘检验/src/: CMakeLists.txt  c.cpp  canny边缘检验笔记
练习/t21pcl检测/: CMakeCache.txt  Makefile  cloud_viewer  cmake_install.cmake
练习/t22/: CMakeLists.txt
练习/t22/src/: CMakeLists.txt  c.cpp
练习/t24/src/: c.cpp
练习/t3/: CMakeLists.txt
练习/t3/lib/: hello.c
练习/t4/src/: CMakeLists.txt
练习/test/src/: c.cpp
练习/xml文件写/: CMakeLists.txt
练习/xml文件写/src/: c.cpp
练习/仿射变换/src/: c.cpp
练习/仿射变换1/: CMakeLists.txt
练习/仿射变换1/src/: CMakeLists.txt  main.cpp
练习/创建Trackbar/src/: c.cpp
练习/初级混合/src/: c.cpp
练习/去除背景光/src/: c.cpp
练习/去除视频中的背景光/src/: CMakeLists.txt  c.cpp  c1.cpp
练习/取阀值测试/src/: c.cpp
练习/图像分割与检测/src/: CMakeLists.txt  c.cpp  c1.cpp
练习/图像显示/src/: c.cpp
练习/图像模糊/src/: c.cpp
练习/图像的写出级简单混合/src/: c.cpp
练习/图像腐蚀/src/: .c.cpp.swp  c.cpp  erode相关笔记
练习/基本图形的绘制/src/: c.cpp
练习/寻找轮廓/src/: c.cpp
练习/带面具/src/: c.cpp
练习/彩色追踪/src/: c.cpp
练习/摄像头中的模式识别/src/: c.cpp
练习/椒盐噪声/src/: c.cpp
练习/模板识别/src/: c.cpp
练习/漫水/: CMakeLists.txt
练习/直方图均衡化/src/: c.cpp
练习/离散型高斯变换/: CMakeLists.txt
练习/背景光去除/src/: c.cpp
练习/调用摄像头/src/: c.cpp
练习/调用摄像头并canny/src/: c.cpp
练习/项目1/src/: c.cpp
练习/高斯滤波/src/: c.cpp
视觉代码/fitfloor/: CMakeLists.txt  ExtrinsicFromCloud.m  cloud2.txt  main.cpp
视觉代码/fitfloor/cloud/: cloud.txt  cloud1.txt  cloud2.txt  cloud3.txt
视觉代码/floor_fit_cloud/: CMakeLists.txt  cc.cpp  main.cpp
视觉代码/necttest/: CMakeLists.txt  main.cpp  rgbd_camera.cpp  rgbd_camera.h
视觉代码/ni_recorder/: main.cpp  ni2exmaple.cbp  ni2exmaple.depend  ni2exmaple.layout  readme.txt
