CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(ORB)
SET(CMAKE_CXX_STANDARD 11)
set(CMAKE_MODULE_PATH /home/xuxuxu/cmake_modules)
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_CONFIGURATION_TYPES Debug Release)
set(CMAKE_CXX_FLAGS_RELEASE   "${CMAKE_CXX_FLAGS_RELEASE} -Wall -O3 -march=native")
set(CMAKE_CXX_FLAGS_DEBUG    "${CMAKE_CXX_FLAGS_DEBUG} -Wall -pg -march=native")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
set(SOURCE_FILES main.cpp )
add_executable(ORB ${SOURCE_FILES})
find_package(OpenCV 3.1.0 REQUIRED)
include_directories(${OPENCV_INCLUDE_DIRS})
target_link_libraries(ORB  ${OpenCV_LIBS})
