cmake_minimum_required(VERSION 3.5)
project(fitfloor)

set(CMAKE_CXX_STANDARD 11)
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules)

set(CMAKE_BUILD_TYPE Debug)

set(CMAKE_CONFIGURATION_TYPES Debug Release)

set(CMAKE_C_FLAGS_RELEASE  "${CMAKE_C_FLAGS_RELEASE} -Wall -O3 -march=native")
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -Wall -pg -march=native")

set(CMAKE_CXX_FLAGS_RELEASE   "${CMAKE_CXX_FLAGS_RELEASE} -Wall -O3 -march=native")
set(CMAKE_CXX_FLAGS_DEBUG    "${CMAKE_CXX_FLAGS_DEBUG} -Wall -pg -march=native")

find_package(Eigen3 REQUIRED)
find_package(OpenCV 3.1.0 REQUIRED)

include_directories(
        ${EIGEN3_INCLUDE_DIR}
        ${OPENCV_INCLUDE_DIRS}
)

set(SOURCE_FILES main.cpp)
add_executable(fitfloor ${SOURCE_FILES})

target_link_libraries(fitfloor
        ${OpenCV_LIBS}
)
