ADD_EXECUTABLE(SHOW c.cpp)
FIND_PACKAGE( PCL REQUIRED COMPONENTS common io )

# 增加opencv的依赖
FIND_PACKAGE( OpenCV REQUIRED )

# 添加头文件和库文件
ADD_DEFINITIONS( ${PCL_DEFINITIONS} )
INCLUDE_DIRECTORIES( ${PCL_INCLUDE_DIRS}  )
LINK_LIBRARIES( ${PCL_LIBRARY_DIRS} )

ADD_EXECUTABLE( SHOW c.cpp )
TARGET_LINK_LIBRARIES( SHOW ${OpenCV_LIBS} 
    ${PCL_LIBRARIES} )

